--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/trabajofinal
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver.class=com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
